--- a/app/src/main/res/layout/item_home_today_food.xml
+++ b/app/src/main/res/layout/item_home_today_food.xml
@@ -33,97 +33,19 @@
         android:layout_marginRight="23dp"
         android:layout_marginTop="15dp"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/today_food_cl_1"
+    <TextView
+        android:id="@+id/today_food_1"
+        android:text="순두부 찌개 "
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/notosans_regular"
+        android:textAlignment="center"
+        android:paddingHorizontal="10dp"
+        android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/today_day"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="17dp"
-        >
-
-        <TextView
-            android:id="@+id/today_food_1"
-            android:text="순두부 찌개 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textColor="@color/main_color"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/today_food_2"
-            android:text="쌀밥 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/today_food_1"
-            />
-
-        <TextView
-            android:id="@+id/today_food_3"
-            android:text="생선까스&amp;타르소스"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/today_food_2" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/today_food_cl_2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/today_food_cl_1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="-20dp"
-        >
-
-        <TextView
-            android:id="@+id/today_food_4"
-            android:text="마늘쫑비엔나볶음 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
-
-        <TextView
-            android:id="@+id/today_food_5"
-            android:text="꼬들단무지무침 "
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/today_food_4"
-            />
-
-        <TextView
-            android:id="@+id/today_food_6"
-            android:text="배추김치"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/notosans_regular"
-            android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/today_food_5" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        />
 
     <ImageView
         android:id="@+id/today_line_iv"
@@ -132,7 +54,7 @@
         android:src="@drawable/ic_line_4"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/today_food_cl_2"
+        app:layout_constraintTop_toBottomOf="@id/today_food_1"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp" />
