--- a/app/src/main/res/drawable/home_food_stroke.xml
+++ b/app/src/main/res/drawable/home_food_stroke.xml
@@ -1,19 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item>
-        <shape android:shape="rectangle">
-        </shape>
-    </item>
-    <item android:top="1dp"
-        android:right="1dp"
-        android:left="1dp"
-        android:bottom="1dp">
-        <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/home_gray_color"/>
-            <corners
-                android:radius="10dp"/>
-        </shape>
-    </item>
-
+    <!-- Drop Shadow Stack -->
+    <item> <shape> <padding android:top="2dp" android:right="2dp" android:bottom="2dp" android:left="2dp" /> <corners android:radius="10dp" /> <solid android:color="#00CCCCCC" /> </shape> </item>
+    <item> <shape> <padding android:top="2dp" android:right="2dp" android:bottom="2dp" android:left="2dp" /> <corners android:radius="10dp" /> <solid android:color="#10CCCCCC" /> </shape> </item>
+    <item> <shape> <padding android:top="2dp" android:right="2dp" android:bottom="2dp" android:left="2dp" /> <corners android:radius="10dp" /> <solid android:color="#20CCCCCC" /> </shape> </item>
+    <item> <shape> <padding android:top="2dp" android:right="2dp" android:bottom="2dp" android:left="2dp" /> <corners android:radius="10dp" /> <solid android:color="#30CCCCCC" /> </shape> </item>
+    <item> <shape> <padding android:top="2dp" android:right="2dp" android:bottom="2dp" android:left="2dp" /> <corners android:radius="10dp" /> <solid android:color="#50CCCCCC" /> </shape> </item>
+    <!-- Background -->
+    <item> <shape> <solid android:color="#ffffff" /> <corners android:radius="10dp" /> </shape> </item>
 </layer-list>
