--- a/app/src/main/res/layout/item_home_food.xml
+++ b/app/src/main/res/layout/item_home_food.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/home_food_stroke"
+    android:elevation="150dp"
     android:layout_marginHorizontal="25dp">
 
 
@@ -58,6 +59,7 @@
         android:paddingHorizontal="10dp"
         android:fontFamily="@font/notosans_regular"
         android:textSize="16sp"
+        android:breakStrategy="balanced"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_afternoon_cl"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -108,6 +110,7 @@
         android:fontFamily="@font/notosans_regular"
         android:textSize="16sp"
         android:textAlignment="center"
+        android:breakStrategy="balanced"
         android:paddingHorizontal="10dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_afternoon2_cl"
@@ -159,6 +162,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/notosans_regular"
         android:textAlignment="center"
+        android:breakStrategy="balanced"
         android:paddingHorizontal="10dp"
         android:textSize="16sp"
         app:layout_constraintTop_toBottomOf="@+id/week_food_day_evening_cl"
