--- a/app/src/main/res/navigation/myongsik_nav_graph.xml
+++ b/app/src/main/res/navigation/myongsik_nav_graph.xml
@@ -118,5 +118,8 @@
         <action
             android:id="@+id/action_fragment_select_home_to_fragment_home"
             app:destination="@id/fragment_home" />
+        <action
+            android:id="@+id/action_fragment_select_home_to_fragment_search"
+            app:destination="@id/fragment_search" />
     </fragment>
 </navigation>
