--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -123,7 +123,7 @@
                     android:id="@+id/home_time_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/home_time_tv"
+                    tools:text="@string/home_time_tv"
                     android:textSize="11sp"
                     android:layout_marginTop="-16dp"
                     android:textFontWeight="700"
