--- a/app/src/main/res/layout/fragment_select.xml
+++ b/app/src/main/res/layout/fragment_select.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-19dp"
         android:fontFamily="@font/notosans_regular"
-        android:text="명지대 학식 식단표 제공 앱"
+        android:text="@string/app_sub_title"
         android:textColor="@color/sub_color"
         android:textSize="11sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -38,11 +38,11 @@
         android:fontFamily="@font/notosans_regular"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:text="인문캠퍼스"
         android:stateListAnimator="@null"
-         android:textColor="@color/white"
-        android:textFontWeight="700"
+        android:text="@string/seoul_campus"
+        android:textColor="@color/white"
         android:textSize="14sp"
+        android:textStyle="bold"
         app:backgroundTint="@color/sub_color"
         app:cornerRadius="100dp"
         app:iconPadding="0dp"
@@ -58,20 +58,19 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="65dp"
         android:layout_marginTop="17dp"
-        android:fontFamily="@font/notosans_regular"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:text="자연캠퍼스"
         android:stateListAnimator="@null"
-        android:textFontWeight="700"
+        android:text="@string/yongin_campus"
         android:textSize="14sp"
-        app:strokeColor="@color/sub_color"
-        app:strokeWidth="2dp"
+        android:textStyle="bold"
         app:backgroundTint="@color/sub_color"
         app:cornerRadius="100dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/splash_f_bt" />
+        app:layout_constraintTop_toBottomOf="@id/splash_f_bt"
+        app:strokeColor="@color/sub_color"
+        app:strokeWidth="2dp" />
 
     <EditText
         android:id="@+id/splash_et"
@@ -80,7 +79,7 @@
         android:layout_marginTop="9dp"
         android:focusable="false"
         android:paddingBottom="7.5dp"
-        android:text="캠퍼스 설정"
+        android:text="@string/campus_setting"
         android:textColor="#717171"
         android:textSize="10sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -91,7 +90,7 @@
         android:id="@+id/splash_et_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="0dp"
+        android:paddingStart="0dp"
         android:paddingTop="2.5dp"
         android:src="@drawable/ic_help"
         app:layout_constraintBottom_toBottomOf="@id/splash_et"
@@ -106,11 +105,11 @@
         android:layout_marginStart="10dp"
         android:background="@drawable/ic_help_select_custom"
         android:elevation="10dp"
-        android:visibility="gone"
         android:fontFamily="@font/notosans_regular"
         android:text="@string/splash_help_select"
         android:textColor="@color/black"
         android:textSize="10sp"
+        android:visibility="gone"
         app:backgroundTint="@color/white"
         app:cornerRadius="100dp"
         app:layout_constraintEnd_toEndOf="parent"
