--- a/app/src/main/res/layout/item_restaurant_food.xml
+++ b/app/src/main/res/layout/item_restaurant_food.xml
@@ -1,135 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/home_food_stroke"
     android:layout_marginHorizontal="16dp"
-    android:paddingTop="1dp"
-    android:layout_marginBottom="11dp">
+    android:layout_marginBottom="11dp"
+    android:background="@drawable/home_food_stroke"
+    android:paddingTop="1dp">
 
     <TextView
         android:id="@+id/item_food_name"
-        android:text="식당이름"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/notosans_regular"
-        android:textFontWeight="700"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="16dp"
+        android:padding="5dp"
         android:textColor="#000000"
         android:textSize="20sp"
-        android:layout_marginStart="16dp"
-        />
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="식당이름" />
 
     <ImageView
         android:id="@+id/item_food_ellipse_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="0dp"
         android:src="@drawable/ic_restaurant_ellipse"
-        app:layout_constraintTop_toTopOf="@id/item_food_name"
         app:layout_constraintBottom_toBottomOf="@id/item_food_name"
         app:layout_constraintLeft_toRightOf="@id/item_food_name"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="0dp"/>
+        app:layout_constraintTop_toTopOf="@id/item_food_name" />
 
     <TextView
         android:id="@+id/item_food_object"
-        android:text="가게 종류"
-        android:textSize="12sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/item_food_ellipse_iv"
+        android:layout_marginStart="5dp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/item_food_ellipse_iv"
         app:layout_constraintLeft_toRightOf="@id/item_food_ellipse_iv"
-        android:layout_marginLeft="5dp"/>
+        app:layout_constraintTop_toTopOf="@id/item_food_ellipse_iv"
+        tools:text="가게 종류" />
 
     <TextView
         android:id="@+id/week_food_afternoon_tv"
-        android:text="320m"
-        android:fontFamily="@font/notosans_regular"
-        android:textColor="@color/main_color"
-        android:textSize="10sp"
-        android:textFontWeight="700"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/item_food_object"
+        android:layout_marginLeft="5dp"
+        android:text="320m"
+        android:textColor="@color/main_color"
+        android:textSize="10dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/item_food_object"
         app:layout_constraintLeft_toRightOf="@id/item_food_object"
-        android:layout_marginLeft="5dp"
-        />
+        app:layout_constraintTop_toTopOf="@id/item_food_object" />
 
     <ImageView
         android:id="@+id/item_food_love_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_food_love"
-        app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv"
-        app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="16dp"
         android:paddingBottom="5dp"
-        />
+        android:src="@drawable/ic_food_love"
+        app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv" />
 
     <ImageView
         android:id="@+id/item_food_love_fill_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_food_love_fill"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv"
-        app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="16dp"
         android:paddingBottom="5dp"
-        />
+        android:src="@drawable/ic_food_love_fill"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/week_food_afternoon_tv"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/week_food_afternoon_tv" />
 
     <ImageView
         android:id="@+id/item_food_location_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="5dp"
         android:src="@drawable/ic_place"
-        app:layout_constraintTop_toBottomOf="@id/item_food_name"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="1dp"/>
+        app:layout_constraintTop_toBottomOf="@id/item_food_name" />
 
     <TextView
         android:id="@+id/item_food_location_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="가게 위치"
-        app:layout_constraintTop_toTopOf="@id/item_food_location_iv"
+        android:layout_marginStart="5dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="@id/item_food_location_iv"
         app:layout_constraintLeft_toRightOf="@id/item_food_location_iv"
-        android:layout_marginLeft="5dp"
-        />
+        app:layout_constraintTop_toTopOf="@id/item_food_location_iv"
+        tools:text="가게 위치" />
 
     <ImageView
         android:id="@+id/item_food_phone_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_phone"
-        app:layout_constraintTop_toBottomOf="@id/item_food_location_tv"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="18dp"
+        android:layout_marginStart="18dp"
         android:layout_marginTop="9dp"
+        android:layout_marginBottom="20dp"
         android:paddingTop="3dp"
-        />
+        android:src="@drawable/ic_phone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_food_location_tv" />
 
     <TextView
         android:id="@+id/item_food_phone_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="가게 전화번호"
-        app:layout_constraintTop_toTopOf="@id/item_food_phone_iv"
+        android:layout_marginStart="7dp"
+        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="@id/item_food_phone_iv"
         app:layout_constraintLeft_toRightOf="@id/item_food_phone_iv"
-        android:layout_marginLeft="7dp"
-        />
+        app:layout_constraintTop_toTopOf="@id/item_food_phone_iv"
+        tools:text="가게 전화번호" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -145,11 +139,11 @@
             android:id="@+id/item_food_detail_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="5dp"
-            android:paddingBottom="6dp"
             android:paddingStart="13dp"
+            android:paddingTop="5dp"
             android:paddingEnd="22dp"
-            android:text="바로 가기"
+            android:paddingBottom="6dp"
+            android:text="@string/direct_go"
             android:textColor="@color/white"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -161,16 +155,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/ic_food_detail_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
