--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -19,16 +19,16 @@
             android:background="@drawable/home_background_top"
             app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/search_back_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="6dp"
-        android:layout_marginTop="35dp"
-        android:src="@drawable/ic_ep_arrow_left"
-        android:visibility="invisible"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:id="@+id/search_back_bt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:layout_marginTop="35dp"
+            android:src="@drawable/ic_ep_arrow_left"
+            android:visibility="invisible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/search_top_tv"
@@ -74,198 +74,47 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/search_top_tv" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/tl_search"
-        android:layout_width="0dp"
-        android:layout_height="43dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="23dp"
-        android:background="@drawable/search_food_stroke"
-        android:drawableEnd="@drawable/search_find_icon"
-        android:hint="@string/search_restaurant_text"
-        android:inputType="textAutoComplete"
-        android:paddingStart="22dp"
-        android:paddingEnd="14dp"
-        android:textSize="13sp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@id/search_back_bt"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/search_back_bt"
-        app:layout_constraintTop_toTopOf="@id/search_back_bt" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tl_search"
+            android:layout_width="0dp"
+            android:layout_height="43dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="23dp"
+            android:background="@drawable/search_food_stroke"
+            android:drawableEnd="@drawable/search_find_icon"
+            android:hint="@string/search_restaurant_text"
+            android:inputType="textAutoComplete"
+            android:paddingStart="22dp"
+            android:paddingEnd="14dp"
+            android:textSize="13sp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@id/search_back_bt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/search_back_bt"
+            app:layout_constraintTop_toTopOf="@id/search_back_bt" />
 
-    <View
-        android:id="@+id/search_find_v"
-        android:layout_width="match_parent"
-        android:layout_height="1.4dp"
-        android:layout_marginTop="19dp"
-        android:background="@color/sub_color"
-        android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@+id/tl_search" />
+        <View
+            android:id="@+id/search_find_v"
+            android:layout_width="match_parent"
+            android:layout_height="1.4dp"
+            android:layout_marginTop="19dp"
+            android:background="@color/sub_color"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@+id/tl_search" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_myongji_rv"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="25dp"
-        android:scrollbars="vertical"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_find_v"
-        app:layout_constraintVertical_bias="1.0" />
-
-        <TextView
-            android:id="@+id/good_cafe_drink_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="-16dp"
-            android:fontFamily="@font/notosans_regular"
-            android:text="@string/search_restaurant_list"
-            android:textColor="#0E0E0E"
-            android:textFontWeight="700"
-            android:textSize="20sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/search_top_v" />
-
-        <HorizontalScrollView
-            android:id="@+id/horizon_sv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/good_cafe_drink_tv">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/item_search_hashtag1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/tag_stroke">
-
-                    <TextView
-                        android:id="@+id/hashtag_good_food"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:paddingVertical="8dp"
-                        android:text="@string/search_univ_good"
-                        android:textColor="#000000"
-                        android:textSize="16sp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/item_search_hashtag2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/tag_stroke">
-
-                    <TextView
-                        android:id="@+id/week_food_afternoon_tv1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:paddingVertical="8dp"
-                        android:text="@string/search_univ_cafe"
-                        android:textColor="#000000"
-                        android:textSize="16sp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/item_search_hashtag3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/tag_stroke">
-
-                    <TextView
-                        android:id="@+id/week_food_afternoon_tv2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:paddingVertical="8dp"
-                        android:text="@string/search_univ_drink"
-                        android:textColor="#000000"
-                        android:textSize="16sp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/item_search_hashtag4"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/tag_stroke">
-
-                    <TextView
-                        android:id="@+id/week_food_afternoon_tv3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:paddingVertical="8dp"
-                        android:text="@string/search_univ_bread"
-                        android:textColor="#000000"
-                        android:textSize="16sp"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/item_search_hashtag5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:background="@drawable/tag_stroke"
-                    android:visibility="invisible">
-
-                    <TextView
-                        android:id="@+id/week_food_afternoon_tv_plus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingHorizontal="12dp"
-                        android:text="#"
-                        android:textColor="#000000"
-                        android:visibility="invisible"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </LinearLayout>
-        </HorizontalScrollView>
-
-        <TextView
-            android:id="@+id/good_place_myongji"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:fontFamily="@font/notosans_regular"
-            android:text="@string/search_already_food"
-            android:textColor="#0E0E0E"
-            android:textFontWeight="700"
-            android:textSize="20sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/horizon_sv" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_myongji_rv"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="25dp"
+            android:scrollbars="vertical"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/search_find_v"
+            app:layout_constraintVertical_bias="1.0" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/search_myongji_rank"
@@ -275,7 +124,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/good_place_myongji"
+            app:layout_constraintTop_toBottomOf="@id/search_top_v"
             tools:listitem="@layout/item_restaurant_ranking" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
